--- a/server/project/templates/nodes.html
+++ b/server/project/templates/nodes.html
@@ -24,7 +24,7 @@
         <p>Record Created at: {{ node.creation_time }}</p>
         <div class="h6">
             <form action="{{ url_for('nodes.summary', node_id=node.id) }}" method="post">
-                <div class="mb-3">
+                <div class="mb-3 col-md-6">
                     <input autofocus class="form-control" type="text" name="summary"
                         placeholder="Please Type Your Comment Here" required>
                 </div>
