--- a/server/project/templates/base.html
+++ b/server/project/templates/base.html
@@ -63,6 +63,17 @@
         <form method="get" action="/refresh">
             <input class="mt-3 btn btn-info" type="submit" value="Refresh" name="refresh"/>
         </form>
+        <div class="mt-3">
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-warning" role="alert">
+                {{ message }}
+            </div>
+            {% endfor %}
+            {% endif %}
+            {% endwith %}
+        </div>
         {% block content %} {% endblock %}
     </div>
 </body>
