--- a/server/project/templates/login.html
+++ b/server/project/templates/login.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
  
 {% block content %}
-  <div class="container">
+    <p class="leading-relaxed mb-6 text-green-500">Tailwind CSS</p>
+    <div class="container">
     <form
         method="POST"
         action="{{ url_for('auth.login') }}"
         role="form">
-      {{ form.csrf_token }}
-      <div class="mb-3 form-group">{{ form.username.label }}: {{ form.username() }}</div>
-      <div class="mb-3 form-group">{{ form.password.label }}: {{ form.password() }}</div>
-      <button type="submit" class="btn btn-default">Submit</button>
+        {{ form.csrf_token }}
+        <div class="mb-3 form-group">{{ form.username.label }}: {{ form.username() }}</div>
+        <div class="mb-3 form-group">{{ form.password.label }}: {{ form.password() }}</div>
+        <button type="submit" class="btn btn-default">Submit</button>
     </form>
-  </div>
+    </div>
 {% endblock %}
